tests/snapshots/snapshot_tests__snap_parse_tensor_type.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
[E0100] expected ')', found '['
