tests/snapshots/snapshot_tests__snap_parse_val_var_bindings.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
{
  "items": [
    {
      "kind": {
        "Function": {
          "name": "main",
          "generics": [],
          "params": [],
          "return_type": null,
          "body": {
            "stmts": [
              {
                "kind": {
                  "Let": {
                    "name": {
                      "kind": {
                        "Identifier": "x"
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 9
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 11
                        }
                      }
                    },
                    "mutable": false,
                    "ty": {
                      "kind": {
                        "Named": "Int64"
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 12
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 19
                        }
                      }
                    },
                    "initializer": {
                      "kind": {
                        "Literal": {
                          "Int": 10
                        }
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 20
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 3,
                          "column": 23
                        }
                      }
                    }
                  }
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 3,
                    "column": 5
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 4,
                    "column": 8
                  }
                }
              },
              {
                "kind": {
                  "Let": {
                    "name": {
                      "kind": {
                        "Identifier": "y"
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 9
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 11
                        }
                      }
                    },
                    "mutable": true,
                    "ty": {
                      "kind": {
                        "Named": "Int64"
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 12
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 19
                        }
                      }
                    },
                    "initializer": {
                      "kind": {
                        "Literal": {
                          "Int": 20
                        }
                      },
                      "span": {
                        "start": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 20
                        },
                        "end": {
                          "file": "test.axon",
                          "line": 4,
                          "column": 23
                        }
                      }
                    }
                  }
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 4,
                    "column": 5
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 5,
                    "column": 6
                  }
                }
              },
              {
                "kind": {
                  "Expr": {
                    "kind": {
                      "Assignment": {
                        "target": {
                          "kind": {
                            "Identifier": "y"
                          },
                          "span": {
                            "start": {
                              "file": "test.axon",
                              "line": 5,
                              "column": 5
                            },
                            "end": {
                              "file": "test.axon",
                              "line": 5,
                              "column": 8
                            }
                          }
                        },
                        "op": "Assign",
                        "value": {
                          "kind": {
                            "BinaryOp": {
                              "left": {
                                "kind": {
                                  "Identifier": "y"
                                },
                                "span": {
                                  "start": {
                                    "file": "test.axon",
                                    "line": 5,
                                    "column": 9
                                  },
                                  "end": {
                                    "file": "test.axon",
                                    "line": 5,
                                    "column": 12
                                  }
                                }
                              },
                              "op": "Add",
                              "right": {
                                "kind": {
                                  "Identifier": "x"
                                },
                                "span": {
                                  "start": {
                                    "file": "test.axon",
                                    "line": 5,
                                    "column": 13
                                  },
                                  "end": {
                                    "file": "test.axon",
                                    "line": 5,
                                    "column": 15
                                  }
                                }
                              }
                            }
                          },
                          "span": {
                            "start": {
                              "file": "test.axon",
                              "line": 5,
                              "column": 9
                            },
                            "end": {
                              "file": "test.axon",
                              "line": 5,
                              "column": 15
                            }
                          }
                        }
                      }
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 5,
                        "column": 5
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 5,
                        "column": 15
                      }
                    }
                  }
                },
                "span": {
                  "start": {
                    "file": "test.axon",
                    "line": 5,
                    "column": 5
                  },
                  "end": {
                    "file": "test.axon",
                    "line": 6,
                    "column": 2
                  }
                }
              }
            ],
            "tail_expr": null,
            "span": {
              "start": {
                "file": "test.axon",
                "line": 2,
                "column": 11
              },
              "end": {
                "file": "test.axon",
                "line": 7,
                "column": 1
              }
            }
          },
          "span": {
            "start": {
              "file": "test.axon",
              "line": 2,
              "column": 1
            },
            "end": {
              "file": "test.axon",
              "line": 7,
              "column": 1
            }
          }
        }
      },
      "span": {
        "start": {
          "file": "test.axon",
          "line": 2,
          "column": 1
        },
        "end": {
          "file": "test.axon",
          "line": 7,
          "column": 1
        }
      },
      "visibility": "Private",
      "attributes": []
    }
  ],
  "span": {
    "start": {
      "file": "test.axon",
      "line": 2,
      "column": 1
    },
    "end": {
      "file": "test.axon",
      "line": 7,
      "column": 1
    }
  }
}
